Improve swagger documentation
